# src/routers/contact-us.router.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const { contactUsCon } = require("../controllers");
+
+
+const contactUsRouter = express.Router();
+contactUsRouter.post("/", contactUsCon.send);
+
+module.exports = contactUsRouter;
